vpc/main.tf
#create vpc only
resource "aws_vpc" "main" {
  cidr_block       = "10.0.0.0/16"
  enable_dns_hostnames = var.enable_dns_hostnames

  tags = merge(
    var.common_tags,
     var.vpc_tags,{
       Name=local.name
     }
    )
}
#create igw
resource "aws_internet_gateway" "gw" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.common_tags,
     var.igw_tags,{
       Name=local.name
     }
    )
}
#create 2 public subnet in 2 azs
resource "aws_subnet" "public" {
  count=length(var.public_subnets_cidr)
  vpc_id     = aws_vpc.main.id
  map_public_ip_on_launch = true
  cidr_block = var.public_subnets_cidr[count.index]
  availability_zone = local.az_names[count.index]

  tags = merge(
    var.common_tags,
     var.public_subnet_tags,{
       Name="${local.name}-public-${local.az_names[count.index]}"
     }
    )
}

#create 2 private subnet in 2 azs
resource "aws_subnet" "private" {
  count=length(var.private_subnets_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.private_subnets_cidr[count.index]
  availability_zone = local.az_names[count.index]
    
  tags = merge(
    var.common_tags,
     var.private_subnet_tags,{
       Name="${local.name}-private-${local.az_names[count.index]}"
     }
    )
}

#create 2 database subnet in 2 azs

resource "aws_subnet" "database" {
  count=length(var.database_subnets_cidr)
  vpc_id     = aws_vpc.main.id
  cidr_block = var.database_subnets_cidr[count.index]
  availability_zone = local.az_names[count.index]
    
  tags = merge(
    var.common_tags,
     var.database_subnet_tags,{
       Name="${local.name}-database-${local.az_names[count.index]}"
     }
    )
}
resource "aws_db_subnet_group" "default" {
  name       = local.name
  subnet_ids = aws_subnet.database[*].id

  tags = {
    Name = local.name
  }
}
#create elastic ip
resource "aws_eip" "eip" {
  domain   = "vpc"
}
#create natgw and associate with elastic ip. but it should create after igw created.
resource "aws_nat_gateway" "ngw" {
  allocation_id = aws_eip.eip.id
  subnet_id     = aws_subnet.public[0].id

  tags = merge(
    var.common_tags,
     var.ngw_tags,{
       Name=local.name
     }
  )
  # To ensure proper ordering, it is recommended to add an explicit dependency
  # on the Internet Gateway for the VPC.
  depends_on = [aws_internet_gateway.gw]
}

#create public route table
resource "aws_route_table" "public" {
  vpc_id = aws_vpc.main.id

  tags =  merge(
    var.common_tags,
     var.public_route_table_tags,{
       Name="${local.name}-public"
     }
    )
  }

#create private route table
resource "aws_route_table" "private" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.common_tags,
     var.private_route_table_tags,{
       Name="${local.name}-private"
     }
    )
}

#create database route table
resource "aws_route_table" "database" {
  vpc_id = aws_vpc.main.id

  tags = merge(
    var.common_tags,
     var.database_route_table_tags,{
       Name="${local.name}-database"
     }
    )
}

#associate public route table to igw
resource "aws_route" "public_route" {
  route_table_id = aws_route_table.public.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id = aws_internet_gateway.gw.id
}
#associate private route table to ngw
resource "aws_route" "private_route" {
  route_table_id = aws_route_table.private.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.ngw.id
}
#associate database route table to ngw
resource "aws_route" "database_route" {
  route_table_id = aws_route_table.database.id
  destination_cidr_block = "0.0.0.0/0"
  nat_gateway_id = aws_nat_gateway.ngw.id
}
#associate public route table to 2 public subnets
resource "aws_route_table_association" "public_association" {
  count = length(var.public_subnets_cidr)
  subnet_id      = element(aws_subnet.public[*].id,count.index)
  route_table_id = aws_route_table.public.id
}
#associate private route table to 2 private subnets
resource "aws_route_table_association" "private_association" {
    count = length(var.private_subnets_cidr)
  subnet_id      = element(aws_subnet.private[*].id,count.index)
  route_table_id = aws_route_table.private.id
}
#associate database route table to 2 database subnets
resource "aws_route_table_association" "db_association" {
    count = length(var.database_subnets_cidr)
  subnet_id      = element(aws_subnet.database[*].id,count.index)
  route_table_id = aws_route_table.database.id
}
